@@ -3,6 +3,7 @@ Changes after 2.2.6 release:
 - Fixed bug in FSTENV instruction (Stanislav Shwartsman)
 - Recognize #XF exception (19) when SSE is enabled
 - Fixed bug in SYSRET instruction legacy mode
+- Fixed bug in PSRAW/PSRAD MMX and SSE instructions
 - Fixes in Bochs debugger and disassembler
 - Save and restore RIP/RSP only for FAULT-type exceptions, not for traps
 - Moved configure time --enable-reset-on-triple-fault option to runtime, 
@@ -11,6 +12,8 @@ Changes after 2.2.6 release:
 - Support for Dual Core and Intel(R) HyperThreading Technology. Now you
   could choose amount of cores per processor and amount of HT threads per
   core from .bochsrc for SMP simulation (Stanislav Shwartsman)
+- Removed --enable-pni configure option, to compile with PNI use 
+  --enable-sse=3 instead (Stanislav Shwartsman)
 
 -------------------------------------------------------------------------
 Changes in 2.2.6 (January 29, 2006):
